Actulizacion con emojis

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">Soy</h3>
-                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Carlos Gomez</h1>
+                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">🧑🏻‍💻 Carlos Gomez</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Desarrollador Web, Back End, Front End</div>
+                    <div class="typed-text d-none">🖥️ Desarrollador Web, 🔩 Back End, 🖍️ Front End</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                     
                     </div>
@@ -107,7 +107,11 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Desarrollador Web</h3>
-                    <p>Desarrollador web Full-Stack, trabajo hacer más de 8 años full time como desarrollador. También me gustan muchos las tecnologías Cloud principalmente AWS (EC2, S3, RDS, etc). Últimamente he estado profundizando en tecnologías del lado de Front como React.</p>
+                    <p>Desarrollador web Full-Stack, trabajo hacer más de 8 años full time como desarrollador.</p>
+                    <br>
+                    <p>Actualmente trabajo en mi propio start-up posicionada en Chile y Peru hace ya más de 5 años .</p>
+                    <br>
+                    <p>También me gustan muchos las tecnologías Cloud principalmente AWS y últimamente he estado profundizando en tecnologías del lado de Front como React.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Nombre: <span class="text-secondary">Carlos Gomez</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">8 años</span></h6></div>
